--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -1,24 +1,32 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <!-- <link rel="stylesheet" href="../css/button.css"> -->
-    <title>Bee Productive</title>
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="../js/service_worker.js"></script>
-
-  </head>
-  <body class="w3-amber">
-    <!-- page title -->
-    <header>
-      <div class="w3-container w3-center">
-        <img src="../../images/icons/bee.png" alt="Bee" style="width:50px;height:50px;">
-        <h1 class="">Bee Productive</h1>
-      </div> 
-    </header>  
-    <!-- nav buttons -->
-    <div class="w3-container w3-center" id="test">    
-      <div>Blacklist url: <input id='blacklist_url'></div>
-    </div>
-  </body>
+	<head>
+		<!-- <link rel="stylesheet" href="../css/button.css"> -->
+		<title>Bee Productive</title>
+		<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
+		<link
+			rel="stylesheet"
+			href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+			integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+			crossorigin="anonymous"
+		/>
+		<script src="../js/service_worker.js"></script>
+	</head>
+	<body class="w3-amber">
+		<!-- page title -->
+		<header>
+			<div class="w3-container w3-center">
+				<img
+					src="../../images/icons/bee.png"
+					alt="Bee"
+					style="width: 50px; height: 50px"
+				/>
+				<h1 class="">Bee Productive</h1>
+			</div>
+		</header>
+		<!-- nav buttons -->
+		<div class="w3-container w3-center" id="test">
+			<div>Blacklist url: <input id="blacklist_url" /></div>
+		</div>
+	</body>
 </html>
