--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -27,6 +27,9 @@
 		<!-- nav buttons -->
 		<div class="w3-container w3-center" id="test">
 			<div>Blacklist url: <input id="blacklist_url" /></div>
+			<button id="submit" class="w3-button w3-black">
+				Submit
+			</button>
 		</div>
 	</body>
 </html>
