--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -4,6 +4,8 @@
 		<!-- <link rel="stylesheet" href="../css/button.css"> -->
 		<title>Bee Productive</title>
 		<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
+		<link rel="stylesheet" href="../css/bee_animation.css">
+		<!-- <link rel="stylesheet" href="../css/popup.css"> -->
 		<link
 			rel="stylesheet"
 			href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -31,7 +33,6 @@
 		<!-- Pomodoro Timer -->
 		<div class="w3-container w3-center">
 			<div>
-				<!-- <form> -->
 					<div class="">
 						Study time:
 							<input id="study-min" type="number"/>
@@ -43,17 +44,32 @@
 							<input id="break-min" type="number"/>
 							<button id="set_break_min" class="w3-button w3-green">Set Break Time</button>
 					</div>
-				<!-- </form> -->
 			</div>
-			<div id="clock"  class="w3-center">
-				<!-- once the start is pressed, the countdown will start here -->
-			</div>
+		
 			<div class="">
 				<p class="">Timer: </p>
+				<div id="clock"  class="w3-center"><!-- once the start is pressed, the countdown will start here --></div>
 				<button id="start" class="w3-button w3-green w3-left">Start</button>
 				<button id="stop" class="w3-button w3-red w3-right">Stop</button>
-			</div>
-	
+				<div id="visual" class=" w3-container bee-width-class">
+					<!-- the bee animation in will added here -->
+
+					<div class="centerTwenty">
+						<div class="rowTwenty">
+						  <div class="test-shape"></div>
+					  
+						</div>
+						<div class="rowTwenty">
+						  <div class="test-shape"></div>
+						  <div class="test-shape"></div>
+						</div>
+						<div class="rowTwenty">
+						  <div class="test-shape"></div>
+					  
+						</div>
+					  </div>
+				</div>
+			</div>	
 		</div>
 
 
